[gd_scene load_steps=7 format=3 uid="uid://njcfjhs5vewd"]

[ext_resource type="Script" uid="uid://ccr7dmkx3hd0g" path="res://Node/UI/CampaignMenu.gd" id="1_lj7hp"]
[ext_resource type="Shader" uid="uid://deyimwq4gij6t" path="res://Ressources/Shader/ScrollShaded.gdshader" id="2_a8d61"]
[ext_resource type="Texture2D" uid="uid://c01kjhhjub531" path="res://Ressources/Sprite/Map/Lem/River.png" id="3_c63nn"]
[ext_resource type="StyleBox" uid="uid://coyfjedan4r7g" path="res://Node/UI/BasicStyle.tres" id="4_c63nn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ox84f"]
shader = ExtResource("2_a8d61")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lj7hp"]
border_width_bottom = 8

[node name="CampaignMenu" type="CanvasLayer" node_paths=PackedStringArray("missionButton0", "missionButton1", "missionButton2", "missionButton3", "missionButton4")]
script = ExtResource("1_lj7hp")
missionButton0 = NodePath("PanelContainer/MarginContainer/VBoxContainer/Mission1")
missionButton1 = NodePath("PanelContainer/MarginContainer/VBoxContainer/Mission2")
missionButton2 = NodePath("PanelContainer/MarginContainer/VBoxContainer/Mission3")
missionButton3 = NodePath("PanelContainer/MarginContainer/VBoxContainer/Mission4")
missionButton4 = NodePath("PanelContainer/MarginContainer/VBoxContainer/Mission5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_ox84f")
position = Vector2(800, 450)
scale = Vector2(2, 2)
texture = ExtResource("3_c63nn")
region_enabled = true
region_rect = Rect2(0, 0, 800, 450)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_c63nn")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Campaign"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxFlat_lj7hp")

[node name="Mission1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mission 1"

[node name="Mission2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mission 2"

[node name="Mission3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mission 3"

[node name="Mission4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mission 4"

[node name="Mission5" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mission 4"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxFlat_lj7hp")

[node name="ReturnButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Return"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Mission1" to="." method="_on_mission_1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Mission2" to="." method="_on_mission_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Mission3" to="." method="_on_mission_3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Mission4" to="." method="_on_mission_4_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Mission5" to="." method="_on_mission_5_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
